--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@hookform/resolvers": "^2.9.10",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.7",
         "@reduxjs/toolkit": "^1.8.2",
@@ -20,12 +21,12 @@
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "formik": "^2.2.9",
         "http-proxy-middleware": "^2.0.3",
         "moment": "^2.29.4",
         "prettier": "^2.7.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-hook-form": "^7.42.1",
         "react-redux": "^8.0.2",
         "react-router-dom": "6",
         "react-scripts": "5.0.0",
