--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.0",
         "dotenv": "^16.0.1",
+        "draft-convert": "^2.1.13",
+        "draft-js": "^0.11.7",
         "env-cmd": "^10.1.0",
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
@@ -27,6 +29,7 @@
         "prettier": "^2.7.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-draft-wysiwyg": "^1.15.0",
         "react-hook-form": "^7.42.1",
         "react-redux": "^8.0.2",
         "react-router-dom": "6",
