--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,8 @@
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.0",
+        "dompurify": "^2.4.3",
         "dotenv": "^16.0.1",
-        "draft-convert": "^2.1.13",
-        "draft-js": "^0.11.7",
         "env-cmd": "^10.1.0",
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
@@ -29,8 +28,8 @@
         "prettier": "^2.7.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
-        "react-draft-wysiwyg": "^1.15.0",
         "react-hook-form": "^7.42.1",
+        "react-quill": "^2.0.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "6",
         "react-scripts": "5.0.0",
