--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,12 @@
         "express": "^4.18.1",
         "express-session": "^1.17.2",
         "fs": "^0.0.1-security",
+        "fs-extra": "^11.1.0",
         "https": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
         "mariadb": "^2.5.5",
         "moment": "^2.29.3",
+        "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.15",
         "prettier": "^2.8.1"
     },
