--- a/client/.gitignore
+++ b/client/.gitignore
@@ -14,6 +14,7 @@ src/pages/MainPage.js
 
 src/Redux/slices/TokenSlice.js
 src/Redux/slices/commentSlice.js
+src/Redux/slices/searchSlice.js
 /src/hooks/
 # testing
 /coverage
