--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,7 @@
             2,
             { "namedcomponents": "arrow-function" }
         ],
+        "react/prop-types": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     },
     // "parser": "babel-eslint",
