--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
+        "start": "cross-env NODE_ENV=production node index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "backend": "nodemon index.js",
+        "backend": "cross-env NODE_ENV=development nodemon index.js",
         "dev": "concurrently \"npm run backend \" \"npm run start --prefix ../client\"",
         "lint": "eslint src --ext .js"
     },
@@ -19,6 +19,7 @@
         "cookie": "^0.5.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "dotenv": "^15.0.0",
         "express": "^4.18.1",
         "express-session": "^1.17.2",
@@ -30,6 +31,7 @@
         "moment": "^2.29.3",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.15",
+        "path": "^0.12.7",
         "prettier": "^2.8.1"
     },
     "devDependencies": {}
