--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
+        "aws-sdk": "^2.1343.0",
         "axios": "^0.26.0",
         "dompurify": "^2.4.3",
         "dotenv": "^16.0.1",
@@ -40,6 +41,7 @@
         "redux-thunk": "^2.4.1",
         "sass": "^1.57.1",
         "universal-cookie": "^4.0.4",
+        "uuid": "^9.0.0",
         "validator": "^13.7.0",
         "web-vitals": "^2.1.4",
         "yarn.lock": "^0.0.1-security",
