--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "2.729.0",
         "axios": "^1.0.0",
         "bcryptjs": "^2.4.3",
         "concurrently": "^7.3.0",
@@ -30,6 +31,7 @@
         "mariadb": "^2.5.5",
         "moment": "^2.29.3",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "2",
         "nodemon": "^2.0.15",
         "path": "^0.12.7",
         "prettier": "^2.8.1"
